# carma-sync

./: carma-sync.cabal
src/Carma/: ModelTables.hs
tools/: carma-clean.hs  carma-fix.hs  carma-sync.hs  inherit-tech1  partner_service-clean.hs
